Fix example wrapping

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -5802,6 +5802,7 @@ table.bar_chart {
 			margin: 0;
 			border: 0;
 			box-shadow: none;
+			width: 100%;
 
 			td, th {
 				border: 0;
@@ -5841,6 +5842,9 @@ table.bar_chart {
 					code {
 						background: none;
 						padding: 0;
+						white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+						word-wrap: break-word; /* IE */
+						word-break: break-all;
 					}
 				}
 			}
